# axum-six-dot-o-qs-query-not-compatible-poc

./: Cargo.toml
src/: main.rs
