[package]
name = "axum-six-dot-o-qs-query-not-compatible-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
serde = { version = "1.0.148", features = ["derive"] }
serde_qs = { version = "0.10.1", features = ["axum"] }
tokio = { version = "1.22.0", features = ["macros"] }
